[package]
name = "XchangeFS"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["full", "kad"] }
tokio = { version = "1", features = ["full"] } # For async support
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dirs = "5"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"
temp-env = { version = "0.3", features =  ["async_closure"] }
serial_test = "3"

[lib]
name = "xchangefs" 
path = "src/lib.rs"